--- a/ee/modules/007-registrypackages/images/kubernetes-cni-astra/scripts/install
+++ b/ee/modules/007-registrypackages/images/kubernetes-cni-astra/scripts/install
@@ -5,3 +5,5 @@
 set -Eeo pipefail
 dpkg -i -E kubernetes-cni_amd64.deb
 apt-mark hold kubernetes-cni
+
+[[ -e flannel ]] && cp -f flannel /opt/cni/bin/flannel
