--- a/ee/modules/007-registrypackages/images/kubernetes-cni-alteros/scripts/install
+++ b/ee/modules/007-registrypackages/images/kubernetes-cni-alteros/scripts/install
@@ -13,5 +13,6 @@ if ! rpm --quiet -q "${rpm_name}-${rpm_version}"; then
 else
   echo "RPM ${package_file} already installed."
 fi
+[[ -e flannel ]] && cp -f flannel /opt/cni/bin/flannel
 
 yum versionlock add ${package}
