--- a/modules/007-registrypackages/images/kubernetes-cni-debian/scripts/install
+++ b/modules/007-registrypackages/images/kubernetes-cni-debian/scripts/install
@@ -16,3 +16,4 @@
 set -Eeo pipefail
 dpkg -i -E kubernetes-cni_amd64.deb
 apt-mark hold kubernetes-cni
+[[ -e flannel ]] && cp -f flannel /opt/cni/bin/flannel
